docs: update wording and formatting

--- a/docs/repetitorium/part four/Testende Verfahren/abnahmetest.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/abnahmetest.tex
@@ -8,7 +8,7 @@ Im \textbf{Abnahmetest} wird das gesamte System in realer Umgebung durch den \te
 Auch wenn die Software für den \textbf{anonymen Markt} entwickelt wurde, sollte ein Abnahmetest der Software durch Unabhängige durchgeführt werden, die das System unvoreingenommen prüfen.
 
 \subsubsection*{Umfang}
-Anstatt den \textbf{Systemtest} zu wiederholen, werden seine Testfälle und Testprotokolle begutachtet und das System stichprobenartig getestet.
+Anstatt den \textbf{Systemtest} im Abnahmetest zu wiederholen, werden die Testfälle und Testprotokolle des Systemtests begutachtet und das System stichprobenartig getestet.
 Hierzu werden i.d.R. Beispiele aus der mitgelieferten Dokumentation von späteren Endanwendern ausprobiert.
 
 \subsubsection*{Verbundtest}
@@ -19,7 +19,7 @@ Damit dieses Risiko minimiert wird, werden \textbf{Verbundtests} durchgeführt, 
 }.
 
 \subsubsection*{Probebetrieb}
-Die Eignung eines vollständig getesteten Systems und die Akzeptanz von Endanwendern im realen Betrieb kann in einem \textbf{Probebetrieb} überprüft werden, bevor das neue System umfassen in Betrieb genommen wird.\\
+Die Eignung eines vollständig getesteten Systems und die Akzeptanz von Endanwendern im realen Betrieb kann in einem \textbf{Probebetrieb} überprüft werden, bevor das neue System umfassend in Betrieb genommen wird.\\
 \textit{Wedemann} führt hierzu verschiedene Möglichkeiten auf (vgl.~\cite[65]{Wed09c}):
 
 \begin{itemize}
@@ -28,7 +28,7 @@ Die Eignung eines vollständig getesteten Systems und die Akzeptanz von Endanwen
     \item Einsatz des neuen Systems nur in einem Teil der Organisation, nachträgliches Einführen in der gesamten Organisation
     \item[] $\rightarrow$ hierbei werden meist Daten erfasst, die dann anschliessend in das Produktivsystem überführt werden müssen, was mit Schwierigkeiten und Aufwänden verbunden ist
     \item als Alternative kann die Akzeptanz der Nutzer in umfangreichen Schulungen überprüft und eine \textbf{Rückfalllösung} für eine nicht erfolgreiche Einführung implementiert werden
-    \item[]$\rightarrow$ auch dieses Vorgehen ist mit erheblichem Aufwand un Risiko verbunden
+    \item[]$\rightarrow$ auch dieses Vorgehen ist mit erheblichem Aufwand und einem hohen Risiko verbunden
 \end{itemize}
 
 \subsubsection*{Betatest}
