--- a/docs/repetitorium/part four/Testende Verfahren/zusammenfassung.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/zusammenfassung.tex
@@ -2,7 +2,7 @@
 
 \begin{itemize}
     \item für die \textbf{Qualitätssicherung} einer Software sind \textbf{testende Verfahren} unverzichtbar
-    \item es gibts verschiedene \textbf{systematische Verfahren}, die bei der Erstellung von \textbf{Testfällen} hilfreich sein können:
+    \item es gibt verschiedene \textbf{systematische Verfahren}, die bei der Erstellung von \textbf{Testfällen} hilfreich sein können:
     \begin{itemize}
         \item Bei \textbf{funktionsorientierten Tests} (\textbf{Black-Box-Tests}) orientieren sich Tester an \textbf{spezifizierter Funktionalität}.
         \item[] Wichtige Hilfsmittel sind hierbei \textbf{Äquivalenzklassen} von \textbf{Eingabedaten}, bei denen sich Software \textbf{gleichartig} verhält.
@@ -23,6 +23,6 @@
     \end{itemize}
     \item für den Test von Systemen, die mit \textbf{objektorientierten Mitteln} implementiert worden sind, gibt es Techniken, die \textbf{Vererbung}, \textbf{Kapselung}  und \textbf{parametrisierte Klassen} berücksichtigen
     \item für die \textbf{Integration} und den \textbf{Integrationstest} gibt es verschiedene Vorgehensweisen, wobei sich in der Praxis der \textbf{Bottom-Up-Ansatz} bewährt hat
-    \item im \textbf{Systemtest} wird neben der \textbf{Funktionalität} des Gesamtsystems ach die nicht-funktionalen Anfforderungen getestet
+    \item im \textbf{Systemtest} wird neben der \textbf{Funktionalität} des Gesamtsystems auch die nicht-funktionalen Anforderungen getestet
     \item der Kunde prüft das System im \textbf{Abnahmetest} auf seine Einsetzbarkeit, wozu der \textbf{Verbundtest}, \textbf{Probebetrieb} oder der \textbf{Betatest} gehören kann
 \end{itemize}
