docs: update wording and formatting

--- a/docs/repetitorium/part four/Testende Verfahren/strukturorientierte testverfahren.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/strukturorientierte testverfahren.tex
@@ -105,9 +105,9 @@ Die \textbf{Bedingungsüberdeckung} fordert, dass im Test \textit{jede} Bedingun
 Die wichtigste Variante der \textbf{Bedingungsüberdeckung} ist die \textbf{einfache Mehrfachbedingungsüberdeckung} (\textit{modified condition decision coverage}):
 
 \begin{tcolorbox}[title=Einfache Mehrfachbedingungsüberdeckung]
-Die \textbf{einfache Mehrfachbedingungsüberdeckung} wird erreicht, wenn \textit{jede} atomare Bedingung, also jeder \textit{direkte Vergleich}, und \textit{alle zusammengesetzten Bedingungen} einmal den Wahrheitswert \textit{wahr}\footnote{
-\textit{Minterm}: Für genau eine Variablenbelegung wahr (vgl.~\cite[92]{Hof22})
-} und einmal den Wahrheitswert \textit{falsch} annehmen.\\
+Die \textbf{einfache Mehrfachbedingungsüberdeckung} wird erreicht, wenn \textit{jede} atomare Bedingung, also jeder \textit{direkte Vergleich}, und \textit{alle zusammengesetzten Bedingungen} einmal den Wahrheitswert \textit{wahr} und einmal den Wahrheitswert \textit{falsch} annehmen\footnote{
+    \textit{Maxterm}: Für genau eine Variablenbelegung falsch (Disjunktion: $A \lor B \lor C$); bzw. \textit{Minterm}: für genau eine Variablenbelegung wahr (Konjunktion: $A \land B \land C$)(vgl.~\cite[92]{Hof22})
+}.\\
     Dadurch wird gleichzeitig eine \textbf{Zweigüberdeckung} erreicht
 \end{tcolorbox}
 
