docs: update wording

--- a/docs/repetitorium/part four/Management des QS-Prozesses/fortschrittsverfolgung.tex
+++ b/docs/repetitorium/part four/Management des QS-Prozesses/fortschrittsverfolgung.tex
@@ -1,6 +1,6 @@
 \section{Fortschrittsverfolgung}
 Für \textbf{Qualitätssicherungsverantwortliche} und \textbf{Projektleiter} ist es notwendig, den Überblick über den Testprozess und den Fortschritt bei der Bearbeitung zu behalten.\\
-Hierzu könenn aus der Testdokumentation ohne großen Aufwand \textbf{Kennzahlen} berechnet und im zeitlichen VErlauf verfolgt werden.
+Hierzu können aus der Testdokumentation ohne großen Aufwand \textbf{Kennzahlen} berechnet und im zeitlichen Verlauf verfolgt werden.
 
 \subsubsection*{Anzahl Fehlerberichte}
 Die Kennzahl \textbf{Anzahl der Fehlerberichte} kann nach dem Bearbeitungsstand und der Priorität aufgeschlüsselt werden.\\
@@ -12,4 +12,4 @@ Handelt es sich dabei um Fehler sehr geringer Priorität, kann die Software aber
 Eine weitere wichtige Kennzahl ist die \textbf{Anzahl der Testfälle} aufgeschlüsselt nach ihrem Bearbeitungsstand (\textit{offen}, \textit{in Bearbeitung}, \textit{abgeschlossen}).\\
 Diese Kennzahl lässt sich täglich aus den Testprotokollen ablesen.\\
 Stagniert diese Zahlen, ist das ein Hinweis auf Probleme im Tests.\\
-Steigt hingegen die Anzahl der Tests \textit{in Arbeit} stark, ohne, dass sich die Anzahl der \textit{abgeschlossenen} Tests verändert, ist das ein Hinweis daraus, dass die Qualität der Software so niedrig ist, dann kein Testfall abgeschlossen werden kann.
+Steigt hingegen die Anzahl der Tests mit dem Status ``\textit{in Arbeit}`` eher stark an, ohne, dass sich die Anzahl der \textit{abgeschlossenen} Tests verändert, ist das ein Hinweis daraus, dass die Qualität der Software so niedrig ist, dann kein Testfall abgeschlossen werden kann.
