--- a/docs/repetitorium/part four/Management des QS-Prozesses/planung.tex
+++ b/docs/repetitorium/part four/Management des QS-Prozesses/planung.tex
@@ -25,6 +25,6 @@ Das \textbf{konkrete Vorgehen} beim Test wird in \textbf{Testfällen definiert}.
 In vielen Unternehmen ist die Art der qualitätssichernden Maßnahmen in unternehmensweit geltenden Standards geregelt.\\
 In diesem Fall kann auf diese Standards im Qualitätssicherungsplan bzw. im Tesplan verwiesen werden.\\
 Trotzdem muss festgelegt werden, \textbf{welche} der Maßnahmen durchgeführt werden sollen.\\
-In vielen kleineren Projekten sol oftmals mit möglichst wenig Dokumentation gearbeitet werden - auch in diesem Fall müssen die Fragen nach dem \textit{was}, \textit{wie}, \textit{wann}, und \textit{von wem} geregelt werden, damit die Beteiligten dasselbe unter einer Maßnahme verstehen.\\
+In vielen kleineren Projekten soll oftmals mit möglichst wenig Dokumentation gearbeitet werden - auch in diesem Fall müssen die Fragen nach dem \textit{was}, \textit{wie}, \textit{wann}, und \textit{von wem} geregelt werden, damit die Beteiligten dasselbe unter einer Maßnahme verstehen.\\
 Solche Festlegungen können als Teil des Managementplans erfolgen oder im einfachsten Fall als Punkteliste.\\
 Wichtig ist auch, dass andere überprüfen können, ob ergriffene Maßnahmen vollständig und zweckmäßig sind.
