chore(docs): fix typo

--- a/docs/repetitorium/part four/Typen von Qualitätsmaßnahmen/v-modell.tex
+++ b/docs/repetitorium/part four/Typen von Qualitätsmaßnahmen/v-modell.tex
@@ -25,7 +25,7 @@ Die in diesem Zusammenhang verwendeten Begriffe \textbf{Verifikation} und \textb
 
 \begin{itemize}
     \item \textbf{Verifikation}: Es wird beurteilt, ob das als Resultat einer Entwicklungsphase vorliegende System bzw. die Komponenten den Vorgaben für diese Phase entsprechen (\textbf{Modul-} bis \textbf{Systemtest})
-    \item \textbf{Validierung}: Es wird beurteilt, ob ein System oder eine Komponente während bzw. am Ende des Entwicklunsgprozesses die spezifizierten Anforderungen erfüllt (\textbf{Abnahmetest})
+    \item \textbf{Validierung}: Es wird beurteilt, ob ein System oder eine Komponente während bzw. am Ende des Entwicklungsprozesses die spezifizierten Anforderungen erfüllt (\textbf{Abnahmetest})
 \end{itemize}
 
 \begin{tcolorbox}[colback=white]
