chore(docs): fix typo

--- a/docs/repetitorium/part one/Requirements Engineering/funktionaleanforderungen.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/funktionaleanforderungen.tex
@@ -78,7 +78,7 @@ Ansatz zur Erstellung:
 
 
 \subsubsection*{Probleme mit formellen Anwendungsfällen}
-Für die detailierte bzw. formelle Ausprägung von Anwendungsfällen eignen sich eher Werkzeuge und Hilfsmittel, die während der Analysephase verwendet werden, wie \textbf{Aktivitätsdiagramme} der Anwendungsfälle, \textbf{Entwürfe} und \textbf{Ablaufdiagramme} der Benutzeroberfläche, oder das \textbf{Domänenmodell}.\\
+Für die detaillierte bzw. formelle Ausprägung von Anwendungsfällen eignen sich eher Werkzeuge und Hilfsmittel, die während der Analysephase verwendet werden, wie \textbf{Aktivitätsdiagramme} der Anwendungsfälle, \textbf{Entwürfe} und \textbf{Ablaufdiagramme} der Benutzeroberfläche, oder das \textbf{Domänenmodell}.\\
 Mit diesen Werkzeugen kann dann auch das Zusammenspiel mehrere Anwendungsfälle modelliert werden, wie \textit{Wedemann} feststellt (vgl.~\cite[71]{Wed09}).\\
 
 \noindent
