chore: add aufgabe 4

--- a/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
+++ b/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
@@ -194,6 +194,10 @@
 %--------------------------------------------------------------------------
 % Die Kapitel werden in separaten .tex-Dateien abgelegt und hier eingebunden.
 	\input{chapters/aufgabe 1/index}
+	\input{chapters/aufgabe 2/index}
+	\input{chapters/aufgabe 3/index}
+	\input{chapters/aufgabe 4/index}
+	\input{chapters/aufgabe 5/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
