docs: update index

--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/code-metriken.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/code-metriken.tex
@@ -7,7 +7,7 @@ Im Folgenden werden die laut \textit{Wedemann} wichtigsten Code-Metriken zur Ana
 \begin{figure}
     \centering
     \includegraphics[scale=0.35]{part four/Werkzeuggestützte Analyse/img/metriken}
-    \caption{Typische Metriken zur Bestimmung des \textbf{Qualitätsmerkmals} \textit{Wartbarkeit} und ihr Zusammenhang mit den Qualitätsteilmerkmalen. \textbf{WMC} steht für  \textit{Weighted Mean Compexity} (s. ``Komplexität``). (Quelle: in Anlehnung an \cite[Abb. 4.3, 37]{Wed09c})}
+    \caption{Typische Metriken zur Bestimmung des \textbf{Qualitätsmerkmals} \textit{Wartbarkeit} und ihr Zusammenhang mit den Qualitätsteilmerkmalen. \textbf{WMC} steht für  \textit{Weighted Mean Complexity} (s. ``Komplexität``). (Quelle: in Anlehnung an \cite[Abb. 4.3, 37]{Wed09c})}
     \label{fig:metriken}
 \end{figure}
 
