--- a/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
+++ b/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
@@ -198,6 +198,7 @@
 	\input{chapters/aufgabe 3/index}
 	\input{chapters/aufgabe 4/index}
 	\input{chapters/aufgabe 5/index}
+	\input{chapters/aufgabe 6/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
