docs: add aufgabe 7

--- a/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
+++ b/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
@@ -168,7 +168,7 @@
 
 	\end{center}}							% Autor der Arbeit
 	\address{\begin{center}
-				 \small{11.06.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
+				 \small{12.06.2024\\  Thorsten Suckow-Homberg, \url{https://thorsten.suckow-homberg.de}}
 	\end{center}} 							% Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
 	\submitdate{} 				% Abgabedatum
 %\begingroup
@@ -199,6 +199,7 @@
 	\input{chapters/aufgabe 4/index}
 	\input{chapters/aufgabe 5/index}
 	\input{chapters/aufgabe 6/index}
+	\input{chapters/aufgabe 7/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
