--- a/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
+++ b/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
@@ -200,6 +200,7 @@
 	\input{chapters/aufgabe 5/index}
 	\input{chapters/aufgabe 6/index}
 	\input{chapters/aufgabe 7/index}
+	\input{chapters/aufgabe 8/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
