docs: add aufgabe 9

--- a/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
+++ b/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
@@ -201,6 +201,7 @@
 	\input{chapters/aufgabe 6/index}
 	\input{chapters/aufgabe 7/index}
 	\input{chapters/aufgabe 8/index}
+	\input{chapters/aufgabe 9/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
