docs: add aufgabe 10

--- a/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
+++ b/docs/tests/einsendeaufgaben 4/Einsendeaufgaben4.tex
@@ -202,6 +202,7 @@
 	\input{chapters/aufgabe 7/index}
 	\input{chapters/aufgabe 8/index}
 	\input{chapters/aufgabe 9/index}
+	\input{chapters/aufgabe 10/index}
 
 %\input{chapters/ZusammenfassungAusblick}
 % ...
